--- a/.github/workflows/auto-create-tag.yml
+++ b/.github/workflows/auto-create-tag.yml
@@ -1,5 +1,4 @@
 name: Auto Create Tag
-
 on:
   pull_request:
     types: [closed]
@@ -15,13 +14,12 @@ jobs:
     # Only run when PR is merged (not closed without merging) and it's from the auto-update-changelog branch
     if: github.event.pull_request.merged == true && github.event.pull_request.head.ref == 'auto-update-changelog'
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Need all git history for comparing changes
-          token: ${{ secrets.GITHUB_TOKEN }}  # Need token for pushing tags
+          fetch-depth: 0 # Need all git history for comparing changes
+          token: ${{ secrets.PAT_TOKEN }} # Using PAT instead of GITHUB_TOKEN
 
       - name: Extract version from pubspec.yaml
         id: extract_version
@@ -46,11 +44,11 @@ jobs:
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
-          
           echo "Creating tag ${{ steps.extract_version.outputs.VERSION }}"
           git tag -a ${{ steps.extract_version.outputs.VERSION }} -m "Release ${{ steps.extract_version.outputs.VERSION }}"
+          # Use PAT for pushing to trigger other workflows
+          git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }}.git
           git push origin ${{ steps.extract_version.outputs.VERSION }}
-          
           echo "Successfully created and pushed tag ${{ steps.extract_version.outputs.VERSION }}"
 
       - name: Tag already exists
