--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,11 +77,11 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   supabase_flutter: ^2.8.4
   shimmer: ^3.0.0
-
   path: any
   logger: any
   confetti: ^0.8.0
   table_calendar: ^3.2.0
+  url_launcher: ^6.2.5
 dependency_overrides:
   analyzer: 7.3.0
 
