--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,7 +76,7 @@ dependencies:
   firebase_analytics: ^10.10.7
   flutter_launcher_icons: ^0.14.3
   supabase_flutter: ^2.8.4
-  shimmer: ^3.0.0
+  skeletonizer: ^1.1.0
   path: any
   logger: any
   confetti: ^0.8.0
